--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,12 @@
     "compilerOptions": {
         "target": "es5",
         "module": "commonjs",
-        "declaration": true, 
-        "stripInternal": true
+        "declaration": true,
+        "stripInternal": true,
+        "lib": [
+            "es2015",
+            "dom"
+        ]
     },
     "exclude": [
         "node_modules"
